implement builder pattern, missing getters and test