@@ -1,18 +1,23 @@
 package com.devtest.SimilarProductRetriver.domain.entity.product;
 
 import com.devtest.SimilarProductRetriver.domain.exception.InvalidDomainException;
+import org.apache.commons.lang.StringUtils;
 
 public class ProductId {
 
-    private final String id;
+    private final String value;
 
-    public ProductId(String id) {
-        this.id = id;
+    public ProductId(String value) {
+        this.value = value;
         checkInvariants();
     }
 
+    public String getValue() {
+        return value;
+    }
+
     private void checkInvariants() {
-        if(id.isBlank())
+        if(StringUtils.isBlank(value))
             throw new InvalidDomainException("Id cant by blank");
     }
 }
